# ZipTakeHome

./: README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
src/demo/: calculator.py  math_utils.py
tests/: test_calculator.py  test_math_utils.py
