[project]
name = "demo"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
src = ["src"]
lint.select = ["E", "F", "I"]  # basic errors + imports

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
